    description.
 * All items with rev_number now set it to 1 in their defaults.
 * When the files of a document are modified, if main is not set then it is
    set to the alphabetically first file.
 * Added CREATE history even for when EPrints are created.
 * Removed () from the end of methods in EPrint.pm
 * Rewrote the eprints _transfer code to reflect the fact it is now much
    more simple.
 * Made some changes to the version/succeeds threading. May cause eprints to
    be included which are not in the "archive" dataset. It's not clear how
    much of a problem this will cause.

2006-02-24 cjg

 * Renamed Search modules to be EPrints::Search, EPrints::Search::Condition
    and EPrints::Search::Field

2006-02-24 tdb

 * Modified LogHandler to use EPrints::OpenArchives::oai_identifier
 * Changed timestamp to datestamp field in Access to be consistent with EPrint
 * Added ContextObject and Journal output plugins (Journal is really an
    auxillary plugin)

2006-02-28 tdb

 * Added wrap_text method to EPrints::Utils
 * Added get_input_bool method to EPrints::Utils (uses wrap_text)
 * Modified scripts to use get_input_bool
 * Modified EPrints::Utils xml_to_utf8 to use wrap_text and cleaned up
    indenting
 * Added Permission dataset
 * Added permission_group to User and Document

2006-02-28 cjg
                                                                                                                                                             
 * Added $dataobj->exists_and_set which is like is_set but does not give a
    warning if the field does not exist.

2006-02-28 cjg

 * Change to the are-you-sure code in bin scripts - now uses a variable called
    $sure for clarity, and also tidied the code a little.

2006-02-28 cjg

 * Moved Apache related methods into a subdirectory Apache/ and renamed them. 

2006-02-28 cjg

 * Changed all output plugins to use exists_and_set rather than is_set. 

