@@ -155,7 +155,7 @@ unless( $force )
 	if( $erasedb ) { print "- all database tables\n"; }
 	if( $erasefiles ) { print "- all eprint files\n"; }
 	print "From repository: ".$repo->get_id."\n";
-	my $sure = EPrints::Utils::get_input_bool( "Are you sure you want this to happen" );
+	my $sure = EPrints::Utils::get_input_confirm( "Are you sure you want this to happen" );
 	unless( $sure )
 	{
 		print "Aborting then.\n";
