@@ -67,7 +67,7 @@ unless( $force )
 		print "Number of records in set: ".$dataset->count( $session )."\n";
 
 	}
-	my $sure = EPrints::Utils::get_input_bool( "Continue" );
+	my $sure = EPrints::Utils::get_input_confirm( "Continue" );
 	unless( $sure )
 	{
 		print "Aborting then.\n\n";
