@@ -3475,4 +3475,7 @@ PACKAGE: 2.2.99.2
 
  * Changed all output plugins to use exists_and_set rather than is_set. 
 
+2006-02-28 tdb
 
+ * Renamed Utils::get_input_bool to get_input_confirm and changed $default
+    option to be $quick (ask only for [y/n])
